--- a/Website.html
+++ b/Website.html
@@ -1,27 +1,121 @@
 <!DOCTYPE html>
 <html>
+
+
+    <title>
+    Familia Omnia
+</title>
+
     <head>
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel='stylesheet' href = "css/website_markup.css">
 
-    </head>
+<a href="#Mosley"> <button>Mosley</button> </a>
+<a href="#Aku"> <button>Aku</button> </a>
+<a href="#Tickler"> <button>Tickler</button> </a>
+
+
+<div style="position: relative;">
+    <a href="/login">
+      <div style="position: absolute; top: -30px; right: 70px;"><input type="button" value="login" /></div>
+</a>
+</div>
+
+<div style="position: relative;">
+    <a href="/register">
+      <div style="position: absolute; top: -30px; right: 0px;"><input type="button" value="register" /></div>
+</a>
+</div>
+
+</head>
     <body style="background-color:#3B7732;">
             
-<title>
-    Familia Omnia
-</title>
-<div class="container">
-        <div class="row">
-            <div class="col-md-3">
-           <button id="Register" 'margin-top: 10px' >
-                 Register
-            </button>   
-            </div>
-        </div>
-    </div>
 
-    <p id='gay'>
-        ur mom gay lol
-    </p>
+
+<body>
+
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+
+<div id="Mosley">
+    <h1>Mosley gay lol</h1>
+</div>
+
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+
+<div id="Aku">
+   <h1>Aku gay lol </h1>
+</div>
+
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+<h3> filler </h3>
+
+<div id="Tickler">
+    <h1>Tickler cool lol</h1>
+</div>
+
+
     </body>
 </html>
